--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 
             <figure class="hero-banner">
               <img
-                src="./assets/images/hero-banner.png"
+                src="./assets/images/hero-banner.jpeg"
                 width="720"
                 height="673"
                 alt="hero banner"
