--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="robots" content="noindex" />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,10 +37,6 @@
               <a href="#home" class="navbar-link" data-nav-link>Home</a>
             </li>
 
-            <!-- <li>
-              <a href="#service" class="navbar-link" data-nav-link>Products</a>
-            </li> -->
-
             <li>
               <a href="#project" class="navbar-link" data-nav-link>Products</a>
             </li>
@@ -49,10 +44,6 @@
             <li>
               <a href="#about" class="navbar-link" data-nav-link>About Us</a>
             </li>
-
-            <!-- <li>
-              <a href="#blog" class="navbar-link" data-nav-link>Blog</a>
-            </li> -->
 
             <li>
               <a href="#contact" class="navbar-link" data-nav-link
@@ -99,7 +90,7 @@
 
             <figure class="hero-banner">
               <img
-                src="./assets/images/hero-banner.jpeg"
+                src="./assets/images/hero-banner.jpg"
                 width="720"
                 height="673"
                 alt="hero banner"
@@ -131,7 +122,7 @@
                     style="--width: 510; --height: 700"
                   >
                     <img
-                      src="./assets/images/project-1.jpg"
+                      src="./assets/images/project-2.jpg"
                       width="510"
                       height="700"
                       loading="lazy"
@@ -141,7 +132,7 @@
                   </figure>
 
                   <div class="card-content">
-                    <h3 class="h3">Designing a better cinema experience</h3>
+                    <h3 class="h3">Bio Hazard Bags</h3>
                   </div>
                 </div>
               </li>
@@ -153,7 +144,7 @@
                     style="--width: 510; --height: 700"
                   >
                     <img
-                      src="./assets/images/project-2.jpg"
+                      src="./assets/images/project-1.jpg"
                       width="510"
                       height="700"
                       alt="Building design process within teams"
@@ -162,7 +153,7 @@
                   </figure>
 
                   <div class="card-content">
-                    <h3 class="h3">Building design process within teams</h3>
+                    <h3 class="h3">Bag On Rolls</h3>
                   </div>
                 </div>
               </li>
@@ -184,9 +175,7 @@
                   </figure>
 
                   <div class="card-content">
-                    <h3 class="h3">
-                      How intercom brings play into their design process
-                    </h3>
+                    <h3 class="h3">Industrial Bags</h3>
                   </div>
                 </div>
               </li>
@@ -208,9 +197,7 @@
                   </figure>
 
                   <div class="card-content">
-                    <h3 class="h3">
-                      Stuck with to-do list, I created a new app for
-                    </h3>
+                    <h3 class="h3">Stand-Up Pouch</h3>
                   </div>
                 </div>
               </li>
@@ -232,29 +219,7 @@
                   </figure>
 
                   <div class="card-content">
-                    <h3 class="h3">Examples of different types of sprints</h3>
-                  </div>
-                </div>
-              </li>
-
-              <li>
-                <div class="project-card">
-                  <figure
-                    class="card-banner img-holder"
-                    style="--width: 510; --height: 700"
-                  >
-                    <img
-                      src="./assets/images/project-6.jpg"
-                      width="510"
-                      height="700"
-                      loading="lazy"
-                      alt="Redesigning the New York times app"
-                      class="img-cover"
-                    />
-                  </figure>
-
-                  <div class="card-content">
-                    <h3 class="h3">Redesigning the New York times app</h3>
+                    <h3 class="h3">Industrial Liner Bags</h3>
                   </div>
                 </div>
               </li>
@@ -273,17 +238,13 @@
               style="--width: 720; --height: 960"
             >
               <img
-                src="./assets/images/about-banner.jpg"
+                src="./assets/images/about-banner.jpeg"
                 width="720"
                 height="960"
                 loading="lazy"
                 alt="about banner"
                 class="img-cover"
               />
-
-              <button class="play-btn" aria-label="Play video">
-                <ion-icon name="play" aria-hidden="true"></ion-icon>
-              </button>
             </div>
 
             <div class="about-content">
@@ -294,16 +255,20 @@
                 eco-friendly and sustainable packaging solutions that reduce
                 waste and promote a greener future. We strive to make a positive
                 impact on the environment and to lead the industry in
-                sustainable packaging practices
+                sustainable packaging practices.
               </p>
 
               <h3 class="h3">Who We Are</h3>
 
               <p class="section-text">
-                Sed ut perspiciatis unde omnis iste natus error sit voluptatem
-                accusantium doloremque laudantium, totam rem aperiam, eaque ipsa
-                quae ab illo inventore veritatis et quasi architecto beatae
-                vitae dicta sunt explicabo.
+                As a trusted manufacturer of industrial bags and biohazard bags,
+                our company is committed to producing high-quality products that
+                meet the needs of our customers. With 15+ years of experience
+                under our belt, we have earned a reputation for being a
+                dependable and trustworthy company that provides high-quality
+                services. We take pride in our commitment to modernizing our
+                production facilities and adhering to international standards to
+                deliver exceptional products and services.
               </p>
 
               <h3 class="h3">Our Success</h3>
@@ -316,45 +281,15 @@
                   ></ion-icon>
 
                   <p class="section-text">
-                    Lorem Ipsum is simply dummy text of the printing and
-                    typesetting industry.
-                  </p>
-                </li>
-
-                <li class="about-item">
-                  <ion-icon
-                    name="checkmark-circle"
-                    aria-hidden="true"
-                  ></ion-icon>
-
-                  <p class="section-text">
-                    It is a long established fact that a reader will be
-                    distracted by the readable content of a page when looking at
-                    its layout.
-                  </p>
-                </li>
-
-                <li class="about-item">
-                  <ion-icon
-                    name="checkmark-circle"
-                    aria-hidden="true"
-                  ></ion-icon>
-
-                  <p class="section-text">
-                    Contrary to popular belief, Lorem Ipsum is not simply random
-                    text. It has roots in a piece of classical Latin literature.
+                    Our extensive client base of over 500+ customers is a
+                    testament to the quality of our products and services. We
+                    take pride in the fact that our clients continue to choose
+                    us as their preferred supplier, and we are committed to
+                    maintaining the highest standards of excellence in all
+                    aspects of our business.
                   </p>
                 </li>
               </ul>
-
-              <h3 class="h3">Our Mission</h3>
-
-              <p class="section-text">
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui
-                blanditiis praesentium voluptatum deleniti atque corrupti quos
-                dolores et quas molestias excepturi sint occaecati cupiditate
-                non provident, similique sunt in.
-              </p>
             </div>
           </div>
         </section>
@@ -438,19 +373,6 @@
         </section>
       </article>
     </main>
-
-    <!-- 
-    - #FOOTER
-  -->
-
-    <!-- <footer class="footer">
-      <div class="container">
-        <p class="copyright">
-          &copy; 2022 All Rights Reserved by
-          <a href="#" class="copyright-link">codewithsadee</a>
-        </p>
-      </div>
-    </footer> -->
 
     <!-- 
     - #BACK TO TOP
